Fix #9923: Messages overflow break word (#3)

--- a/theme-base/components/messages/_messages.scss
+++ b/theme-base/components/messages/_messages.scss
@@ -27,6 +27,7 @@ body {
       .ui-messages-error-detail,
       .ui-messages-fatal-detail {
         margin: 0;
+        overflow-wrap: break-word;
       }
     }
 
